Create new endpoint: GET /users/me
